Created image of ERD employees schema

--- a/employees_data_analysis_sql.ipynb
+++ b/employees_data_analysis_sql.ipynb
@@ -2,35 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "interim-grove",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'config'",
+     "ename": "NameError",
+     "evalue": "name 'L1sta' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-7c44e19cf255>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msqlalchemy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0morm\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSession\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msqlalchemy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcreate_engine\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mconfig\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpassword\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'config'"
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-a8810cf9c3dd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mscipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstats\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mstats\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mmatplotlib\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpyplot\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mconfig\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpgadmin_pass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Desktop/sql-challenge/config.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpgadmin_pass\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mL1sta\u001b[0m\u001b[0;34m&\u001b[0m\u001b[0mBon1ta\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'L1sta' is not defined"
      ]
     }
    ],
    "source": [
     "#!pip install psycopg2\n",
     "\n",
-    "# Import Dependencies\n",
+    "# Import Dependencies from Python - These are the tools we will use for data analysis\n",
     "import pandas as pd\n",
-    "import matplotlib \n",
-    "from sqlalchemy import create_engine, MetaData, Table, Integer\n",
-    "# Python SQL toolkit and Object Relational Mapper\n",
-    "import sqlalchemy\n",
-    "from sqlalchemy.ext.automap import automap_base\n",
-    "from sqlalchemy.orm import Session\n",
-    "from sqlalchemy import create_engine\n",
-    "from config import password\n",
+    "import numpy as numpy\n",
+    "import scipy.stats as stats\n",
+    "from matplotlib import pyplot as pyplot\n",
+    "from config import pgadmin_pass\n",
     "\n"
    ]
   },
@@ -41,10 +38,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Path to squlite\n",
-    "\n",
-    "engine = create_engine('postgresql+psycopg2://user:password@hostname/employees_HP')\n",
-    "connection = engine.connect()\n"
+    "# Import hthe SQL database into Pandas using create_engine \n",
+    "from sqlalchemy import create_engine\n",
+    "from sqlalchemy.dialects import postgresql # This to read postgresql in python\n",
+    "engine = create_engine(f'postgresql+psycopg2://postgres:{pgadmin_pass}@localhost:5432/employees_HP')\n",
+    "connection = engine.connect()"
    ]
   },
   {
