--- a/employees_data_analysis_sql.ipynb
+++ b/employees_data_analysis_sql.ipynb
@@ -38,7 +38,11 @@
    "id": "outstanding-format",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "2. Create a histogram to visualize the most common salary ranges for employees.\n",
+    "\n",
+    "3. Create a bar chart of average salary by title.\n"
+   ]
   },
   {
    "cell_type": "code",
