--- a/employees_data_analysis_sql.ipynb
+++ b/employees_data_analysis_sql.ipynb
@@ -34,14 +34,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "outstanding-format",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-3-211e44222306>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-211e44222306>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    SELECT s.salary, t.title\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "2. Create a histogram to visualize the most common salary ranges for employees.\n",
+    "# FOR BONUS-> SALARY RANGES PER EMPLOYEE TITLE\n",
     "\n",
-    "3. Create a bar chart of average salary by title.\n"
+    "SELECT s.salary, t.title\n",
+    "FROM salaries AS s\n",
+    "JOIN employees e\n",
+    "ON e.emp_no = s.emp_no\n",
+    "JOIN title t\n",
+    "ON e.emp_title_id = t.title_id"
    ]
   },
   {
@@ -50,7 +64,11 @@
    "id": "sharing-prince",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "2. Create a histogram to visualize the most common salary ranges for employees.\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -58,7 +76,9 @@
    "id": "reserved-transparency",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "3. Create a bar chart of average salary by title"
+   ]
   },
   {
    "cell_type": "code",
