Created a View on SQL for the salary ranges per employee title

--- a/employees_data_analysis_sql.ipynb
+++ b/employees_data_analysis_sql.ipynb
@@ -34,28 +34,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "outstanding-format",
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-3-211e44222306>, line 3)",
+     "evalue": "invalid syntax (<ipython-input-5-e7cc5654074d>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-211e44222306>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    SELECT s.salary, t.title\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-e7cc5654074d>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    (SELECT * FROM Salary_Ranges_per_Employee_Title)\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "# FOR BONUS-> SALARY RANGES PER EMPLOYEE TITLE\n",
     "\n",
-    "SELECT s.salary, t.title\n",
-    "FROM salaries AS s\n",
-    "JOIN employees e\n",
-    "ON e.emp_no = s.emp_no\n",
-    "JOIN title t\n",
-    "ON e.emp_title_id = t.title_id"
+    "(SELECT * FROM Salary_Ranges_per_Employee_Title)"
    ]
   },
   {
