--- a/employees_data_analysis_sql.ipynb
+++ b/employees_data_analysis_sql.ipynb
@@ -48,7 +48,8 @@
     }
    ],
    "source": [
-    "# FOR BONUS-> SALARY RANGES PER EMPLOYEE TITLE\n",
+    "# FOR BONUS-> \n",
+    "# 1. SALARY RANGES PER EMPLOYEE TITLE\n",
     "\n",
     "(SELECT * FROM Salary_Ranges_per_Employee_Title)"
    ]
