--- a/employees_data_analysis_sql.ipynb
+++ b/employees_data_analysis_sql.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "interim-grove",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "elementary-excerpt",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,8 @@
     "\n",
     "\n",
     "# Query All Records in the the Database\n",
-    "data = pd.read_sql('SELECT * FROM Salary_Ranges_per_Employee_Title', conn)"
+    "data = pd.read_sql('SELECT s.salary, t.title FROM salaries AS s JOIN employees e \\\n",
+    "ON e.emp_no = s.emp_no JOIN title t ON e.emp_title_id = t.title_id', conn)"
    ]
   },
   {
