--- a/employees_data_analysis_sql.ipynb
+++ b/employees_data_analysis_sql.ipynb
@@ -34,19 +34,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "outstanding-format",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>salary</th>\n",
+       "      <th>title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>78228</td>\n",
+       "      <td>Staff</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>72488</td>\n",
+       "      <td>Engineer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>42365</td>\n",
+       "      <td>Staff</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>55881</td>\n",
+       "      <td>Senior Engineer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>41538</td>\n",
+       "      <td>Senior Engineer</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   salary            title\n",
+       "0   78228            Staff\n",
+       "1   72488         Engineer\n",
+       "2   42365            Staff\n",
+       "3   55881  Senior Engineer\n",
+       "4   41538  Senior Engineer"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# FOR BONUS-> \n",
     "# 1. SALARY RANGES PER EMPLOYEE TITLE\n",
-    "\n",
-    "\n",
-    "\n",
     "# Query All Records in the the Database\n",
+    "\n",
     "data = pd.read_sql('SELECT s.salary, t.title FROM salaries AS s JOIN employees e \\\n",
-    "ON e.emp_no = s.emp_no JOIN title t ON e.emp_title_id = t.title_id', conn)"
+    "ON e.emp_no = s.emp_no JOIN title t ON e.emp_title_id = t.title_id', conn)\n",
+    "\n",
+    "# Show the \n",
+    "data.head()"
    ]
   },
   {
@@ -56,15 +126,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "2. Create a histogram to visualize the most common salary ranges for employees.\n",
+    "# 2. Create a histogram to visualize the most common salary ranges for employees.\n",
     "\n",
     "\n",
-    "#data = pd.read_sql(SELECT s.salary, t.title\n",
-    "FROM salaries AS s\n",
-    "JOIN employees e\n",
-    "ON e.emp_no = s.emp_no\n",
-    "JOIN title t\n",
-    "ON e.emp_title_id = t.title_id\n"
+    "#\n"
    ]
   },
   {
