--- a/employees_data_analysis_sql.ipynb
+++ b/employees_data_analysis_sql.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "interim-grove",
    "metadata": {},
    "outputs": [],
@@ -10,9 +10,9 @@
     "\n",
     "# Import Dependencies from Python - These are the tools we will use for data analysis\n",
     "import pandas as pd\n",
-    "import numpy as numpy\n",
+    "import numpy as np\n",
     "import scipy.stats as stats\n",
-    "from matplotlib import pyplot as pyplot\n",
+    "from matplotlib import pyplot as plt\n",
     "from config import pgadmin_pass\n",
     "\n",
     "from sqlalchemy import create_engine\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "elementary-excerpt",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "outstanding-format",
    "metadata": {},
    "outputs": [
@@ -59,50 +59,56 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>salary</th>\n",
+       "      <th>emp_no</th>\n",
        "      <th>title</th>\n",
+       "      <th>salary</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>78228</td>\n",
+       "      <td>10005</td>\n",
        "      <td>Staff</td>\n",
+       "      <td>78228</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>72488</td>\n",
+       "      <td>10010</td>\n",
        "      <td>Engineer</td>\n",
+       "      <td>72488</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>42365</td>\n",
+       "      <td>10011</td>\n",
        "      <td>Staff</td>\n",
+       "      <td>42365</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>55881</td>\n",
+       "      <td>10018</td>\n",
        "      <td>Senior Engineer</td>\n",
+       "      <td>55881</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>41538</td>\n",
+       "      <td>10035</td>\n",
        "      <td>Senior Engineer</td>\n",
+       "      <td>41538</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   salary            title\n",
-       "0   78228            Staff\n",
-       "1   72488         Engineer\n",
-       "2   42365            Staff\n",
-       "3   55881  Senior Engineer\n",
-       "4   41538  Senior Engineer"
+       "   emp_no            title  salary\n",
+       "0   10005            Staff   78228\n",
+       "1   10010         Engineer   72488\n",
+       "2   10011            Staff   42365\n",
+       "3   10018  Senior Engineer   55881\n",
+       "4   10035  Senior Engineer   41538"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +118,7 @@
     "# 1. SALARY RANGES PER EMPLOYEE TITLE\n",
     "# Query All Records in the the Database\n",
     "\n",
-    "data = pd.read_sql('SELECT s.salary, t.title FROM salaries AS s JOIN employees e \\\n",
+    "data = pd.read_sql('SELECT e.emp_no,t.title, s.salary FROM salaries AS s JOIN employees e \\\n",
     "ON e.emp_no = s.emp_no JOIN title t ON e.emp_title_id = t.title_id', conn)\n",
     "\n",
     "# Show the \n",
@@ -121,15 +127,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "sharing-prince",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np_hist' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-20-262c097a1232>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# 2. Create a histogram to visualize the most common salary ranges for employees.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mhist\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mbin_edges\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhistogram\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp_hist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np_hist' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# 2. Create a histogram to visualize the most common salary ranges for employees.\n",
     "\n",
-    "\n",
-    "#\n"
+    "%matplotlib inline\n",
+    "hist,bin_edges = np.histogram(np_hist)\n",
+    "plt.hist(data)\n",
+    "plt.show()\n",
+    "\n"
    ]
   },
   {
