--- a/employees_data_analysis_sql.ipynb
+++ b/employees_data_analysis_sql.ipynb
@@ -148,18 +148,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<function matplotlib.pyplot.show(close=None, block=None)>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'fig' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-eed17527ce72>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;31m# Save and export the chart\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msavefig\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"charts_output/histogram_salries.png\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtransparent\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'fig' is not defined"
+     ]
     },
     {
      "data": {
@@ -184,12 +185,11 @@
     "plt.hist(salary_emp)\n",
     "plt.title('Histogram salary ranges', loc='center',pad=20)\n",
     "plt.xlabel('Salary in $USD')\n",
-    "\n",
+    "plt.show\n",
     "\n",
     "# Save and export the chart\n",
-    "plt.savefig(\"charts_output/histogram_salries.png\",transparent=False,bbox_inches = 'tight')\n",
-    "\n",
-    "plt.show"
+    "fig.savefig(\"charts_output/histogram_salries.png\",transparent=False)\n",
+    "\n"
    ]
   },
   {
